--- a/newslider.css
+++ b/newslider.css
@@ -1,6 +1,16 @@
-
+@font-face {
+    font-family: 'Micro';
+    src: url('/font/Micro.otf') format('woff2');
+    font-weight: "regular";
+}
+@font-face {
+    font-family: 'Micro';
+    src: url('/font/Micro\ bold.ttf') format('woff2');
+    font-weight: "bold";
+}
 body {
   background: #000000;
+  font-family: micro;
   margin: 0;
   padding: 0;
   display: flex;
