--- a/newslider.css
+++ b/newslider.css
@@ -76,3 +76,13 @@ h1{
 .swiper-slide-shadow.swiper-slide-shadow-cards{
     border-radius: 30px;
 }
+.printer{
+    margin: 30px 0;
+    height: 85vh;
+    width: 60vw;
+}
+.center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
