--- a/newslider.css
+++ b/newslider.css
@@ -1,17 +1,3 @@
-@font-face {
-    font-family: 'Micro';
-    src: url('/font/Micro.otf') format('woff2');
-    font-weight: "regular";
-}
-@font-face {
-    font-family: 'Micro';
-    src: url('/font/Micro\ bold.ttf') format('woff2');
-    font-weight: "bold";
-}
-::selection {
-    background-color: #ffcc00; /* This is a yellow color */
-    color: black; /* Optional: change the text color of the selected text */
-}
 body {
   background-image: linear-gradient(18deg, #2e0e0e, #591120 28.56%, #300404 71.41%);
   font-family: micro;
@@ -75,6 +61,23 @@ h1{
 }
 .swiper-slide-shadow.swiper-slide-shadow-cards{
     border-radius: 30px;
+    position: relative;
+}
+.morebutton{
+    position: fixed;
+    bottom: 40px;
+    right: 20px;
+    background-color: rgb(247, 235, 8);
+    border-radius: 30px;
+    padding: 10px 30px;
+    text-decoration: none;
+    cursor: pointer;
+    box-shadow: black 0 0 10px;
+    color: #2e0e0e;
+    transition: ease-in;
+}
+.morebutton :hover{
+    background-color: antiquewhite;
 }
 .printer{
     margin: 30px 0;
