--- a/project/project.css
+++ b/project/project.css
@@ -9,15 +9,16 @@ body{
     
 }
 section{
-    max-width: 1200px;
+    max-width: 950px;
+    margin: 30px auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 60px;
+    /* margin: 60px; */
 }
 h1{
     font-family: 'Micro';
-    font-size: 133.402px;
+    font-size: 103.31px ;
     color: #FFFFFF;
 }
 .h1div{
@@ -34,10 +35,25 @@ h1{
 .highlighted{
     color: #ffcc00;
     font-family: coda, sans-serif;
-    font-size: 40px;
+    font-size: 30.61px;
 } 
 p{
     color: #FFF;
     font-family: coda, sans-serif;
-    font-size: 25px;
+    font-size: 32.4px;
+}
+.arrowdiv{
+    position: relative;
+}
+
+section{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease; 
+}
+  
+section.active{
+    transform: translateY(0);
+    opacity: 1;
 }
