--- a/newslider.css
+++ b/newslider.css
@@ -1,5 +1,5 @@
 body {
-  background-image: linear-gradient(18deg, #2e0e0e, #591120 28.56%, #300404 71.41%);
+  background-color: #1b4a68;;
   font-family: micro;
   margin: 0;
   padding: 0;
