--- a/newslider.css
+++ b/newslider.css
@@ -65,7 +65,7 @@ h1{
 }
 .morebutton{
     position: fixed;
-    bottom: 40px;
+    top: 40px;
     right: 20px;
     background-color: rgb(247, 235, 8);
     border-radius: 30px;
@@ -88,4 +88,21 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.painting{
+    width: 80vw;
+    height: 80vh;
+    object-fit:contain;
+    border-radius: 30px;
+}
+
+/* Default styles for mobile devices */
+
+
+/* Tablet styles */
+@media (min-width: 600px) {
+}
+
+/* Desktop styles */
+@media (min-width: 1024px) {
 }
