--- a/portfolio.css
+++ b/portfolio.css
@@ -84,8 +84,8 @@ h1{
 }
 .printer{
     margin: 30px 0;
-    height: 85vh;
-    width: 60vw;
+    height: 100vw;
+    width: 90vw;
 }
 .center{
     display: flex;
