--- a/project/project.css
+++ b/project/project.css
@@ -64,3 +64,18 @@ section.active{
     transform: translateY(0);
     opacity: 1;
 }
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
