--- a/navigation.css
+++ b/navigation.css
@@ -1,28 +1,24 @@
 body {
-    font-family: micro, sans-serif;
     position: relative;
     margin: 0;
     padding: 0;
 }
 .contact-form-popup{
     display: none;
-    z-index: 2000;
 }
 .menu-icon {
     font-size: 30px;
     cursor: pointer;
     padding: 10px;
     position: absolute;
-    top: 10px;
     left: 10px;
-    z-index: 1000;
+    z-index: 20002;
 }
 .menu-icon img{
     width: 80px;
     height: 80px;
 }
 .nav-div{
-    z-index: 2000;
     top: 10px;
     left: 10px;
 }
@@ -31,7 +27,6 @@ body {
     position: fixed;
     display: flex;
     align-items: center;
-    top: 10px;
     left: -90vw;
     width: 90vw;
     height: 100px;
@@ -42,6 +37,7 @@ body {
 }
 
 .dropdown-menu a {
+    font-family: code, sans-serif;
     text-decoration: none;
     color: white;
     display: block;
@@ -58,6 +54,9 @@ body {
     flex-direction: row;
     margin-left: 120px;
     justify-content: space-around;
+}
+.menu-a-s a{
+    font-family: micro, sans-serif;
 }
 .form-container{
     position: relative;
@@ -78,6 +77,8 @@ body {
     max-width: 70vw;
 }
 .button{
+    font-family: coda, sans-serif;
+    font-weight: 700;
     margin-top: 40px;
     background-color: rgb(247, 235, 8);
     border-radius: 30px;
@@ -113,4 +114,13 @@ body {
 }
 .menu-icon img {
     animation: shiver 0.5s infinite alternate;
+}
+.form-container h2{
+    font-family: micro, sans-serif;
+}
+.element-container{
+    left: 10px;
+    top: 10px;
+    position: fixed;
+    z-index: 20000;
 }
