--- a/portfolio.css
+++ b/portfolio.css
@@ -1,14 +1,14 @@
 body {
-  background-color: #1b4a68;;
-  font-family: micro;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100vw;
-  overflow-x: hidden;
+    background-image: linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);  
+    font-family: micro;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 .swiper-section{
@@ -19,8 +19,8 @@ body {
 }
 
 .swiper-container {
-  margin-bottom: 40px;
-  border-radius: 30px;
+    margin-bottom: 40px;
+    border-radius: 30px;
 }
 
 .swiper-slide {
