--- a/portfolio.css
+++ b/portfolio.css
@@ -2,7 +2,7 @@ body {
     background-image: linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);  
     font-family: micro;
     margin: 0;
-    padding: 0;
+    padding: 100px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,19 +12,21 @@ body {
 }
 
 .swiper-section{
-    width: 103vw;
+    width: 90vw;
     height: 39vh;
     margin-bottom: 60px;
-    margin-left: 40px;
+    margin-left: 20px;
 }
-
+.swiper-section.logo-section{
+    height: 100vh;
+}
 .swiper-container {
     margin-bottom: 40px;
     border-radius: 30px;
 }
 
 .swiper-slide {
-    width: 85vw;
+    width: 90vw;
     height: 85vh;  
     display: flex;
     align-items: center;
@@ -43,6 +45,8 @@ h1{
     font-size: 40px;
     color: aliceblue;
 }
+
+
 .logo-div{
     width: 100vw;
     height: 90vh;
@@ -85,7 +89,7 @@ h1{
 .printer{
     margin: 30px 0;
     height: 100vw;
-    width: 90vw;
+    width: 80vw;
 }
 .center{
     display: flex;
@@ -103,6 +107,9 @@ h1{
 
 /* Tablet styles */
 @media (min-width: 600px) {
+    body{
+        padding: 0;
+    }
     .h1{
         font-size: 60px;
     }
@@ -118,10 +125,14 @@ h1{
         top: 40px;
     }    
     .swiper-section{
+        margin-left: 40px;
         width: 80vw;
         height: 90vh;
         margin-bottom: 60px;
         margin-left: 0;
+    }
+    .swiper-section.swiper-section.logo-section{
+        height: 90vh;
     }
     .logo-img{
         max-width: 400px;
@@ -130,6 +141,9 @@ h1{
     .logo-div{
         width: 80vw;
         height: 70vh;
+    }
+    .swiper-slide{
+        size: 85vw;
     }
 }
 
