--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@ body {
 }
 
 .swiper-section{
-    width: 90vw;
+    width: 100vw;
     height: 39vh;
     margin-bottom: 60px;
     margin-left: 20px;
@@ -49,7 +49,7 @@ h1{
 
 .logo-div{
     width: 100vw;
-    height: 90vh;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,11 +57,8 @@ h1{
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 30px;
-
 }
 .logo-img{
-    max-width: 400px;
-    max-height: 350px;
     max-width: 80vw;
     max-height: 350px;
     object-fit: cover;
@@ -130,7 +127,7 @@ iframe{
     }    
     .swiper-section{
         margin-left: 40px;
-        width: 80vw;
+        width: 90vw;
         height: 90vh;
         margin-bottom: 60px;
         margin-left: 0;
@@ -138,13 +135,13 @@ iframe{
     .swiper-section.swiper-section.logo-section{
         height: 90vh;
     }
+    .logo-div{
+        width: 100%;
+        height: 70vh;
+    }
     .logo-img{
         max-width: 400px;
         max-height: 350px;
-    }
-    .logo-div{
-        width: 80vw;
-        height: 70vh;
     }
     .swiper-slide{
         size: 85vw;
