--- a/portfolio.css
+++ b/portfolio.css
@@ -7,12 +7,13 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100vw;
+    max-width: 100vw;
     overflow-x: hidden;
 }
 
 .swiper-section{
     width: 100vw;
+    overflow-x: hidden;
     height: 39vh;
     margin-bottom: 60px;
     margin-left: 20px;
@@ -109,6 +110,8 @@ iframe{
 @media (min-width: 600px) {
     body{
         padding: 0;
+        width: 100vw;
+        max-width: none;
     }
     .h1{
         font-size: 60px;
@@ -128,7 +131,7 @@ iframe{
     .swiper-section{
         margin-left: 40px;
         width: 90vw;
-        height: 90vh;
+        height: 100vh;
         margin-bottom: 60px;
         margin-left: 0;
     }
