--- a/portfolio.css
+++ b/portfolio.css
@@ -1,160 +1,152 @@
-body {
-    background-image: linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);  
-    font-family: micro;
-    margin: 0;
-    padding: 100px 0 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    max-width: 100vw;
-    overflow-x: hidden;
+body{
+    margin: 100px 20px;
+    background-attachment: fixed;    
 }
-
-.swiper-section{
-    width: 100vw;
-    overflow-x: hidden;
-    height: 39vh;
-    margin-bottom: 60px;
-    margin-left: 20px;
-}
-.swiper-section.logo-section{
-    height: 100vh;
-}
-.swiper-container {
-    margin-bottom: 40px;
-    border-radius: 30px;
-}
-
-.swiper-slide {
-    width: 90vw;
-    height: 85vh;  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 30px;
-}
-
-.project-img{
+.fullwidth{
+    margin: auto;
     width: 100%;
-    height: 100%;
-    object-fit: contain;
-    border-radius: 30px;
-}
-h1{
-    text-align: center;
-    font-size: 40px;
-    color: aliceblue;
-}
-
-
-.logo-div{
-    width: 100vw;
-    height: 70vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 30px;
-}
-.logo-img{
-    max-width: 80vw;
-    max-height: 350px;
     object-fit: cover;
 }
-.swiper-slide-shadow.swiper-slide-shadow-cards{
-    border-radius: 30px;
+/* width */
+.fullwidth.w90{
+    width: 100%;
+}
+.fullwidth.w80{
+    width: 90%;
+}
+.fullwidth.w70{
+    width: 100%;
+}
+.fullwidth.w60{
+    width: 100%;
+}
+.fullwidth.w50{
+    width: 100%;
+}
+.fullwidth.l-non{
+    margin-left: 0;
+}
+.fullwidth.r-non{
+    margin-right: 0;
+}
+.fullwidth.radius20{
+    border-radius: 20px;
+}
+/* END width */
+
+section{
+    max-width: 950px;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+h1{
+    font-family: 'Micro';
+    font-size: 40px ;
+    color: #FFFFFF;
+}
+.h1div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px auto;
+    padding: 20px 30px;
+    min-width: 60vw;
+    line-height: 10%;
+    left: calc(50% - 843.76px/2 - 0px);
+    background: #1C122D;
+    border-radius: 40px;
+}
+.highlighted{
+    color: #ffcc00;
+    font-family: coda, sans-serif;
+    font-size: 30.61px;
+} 
+.highlighted.removetop{
+    margin-top: 0;
+}
+.highlighted.smaller{
+    font-size: 17px;
+    line-height: 16px;
+}
+p{
+    color: #FFF;
+    font-family: coda, sans-serif;
+    font-size: 32.4px;
+}
+.arrowdiv{
     position: relative;
-}
-.morebutton{
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: rgb(247, 235, 8);
-    border-radius: 30px;
-    padding: 10px 30px;
-    text-decoration: none;
-    cursor: pointer;
-    box-shadow: black 0 0 10px;
-    color: #2e0e0e;
-    transition: ease-in;
-}
-.morebutton :hover{
-    background-color: antiquewhite;
-}
-.printer{
-    margin: 30px 0;
-    height: 85vw;
-    width: 90vw;
 }
 .center{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.painting{
-    width: 90vw;
-    height: 65vw;
-    object-fit:contain;
-    border-radius: 30px;
-}
-iframe{
-    width:90vw;
-    height:50vw;
+
 }
 
+section{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease; 
+}
+  
+section.active{
+    transform: translateY(0);
+    opacity: 1;
+}
+.video-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+    overflow: hidden;
+    border-radius: 20px;
+}
 
-/* Tablet styles */
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 @media (min-width: 600px) {
     body{
-        padding: 0;
-        width: 100vw;
-        max-width: none;
+        margin: 40px 0 40px 0;
     }
-    .h1{
-        font-size: 60px;
+    .h1div{
+        padding: 30px 70px;
     }
-    .printer{
-        height: 85vh;
-        width: 60vw;
-    }    
-    .painting{
-        width: 80vw;
-        height: 80vh;
+    h1{
+        font-size: 103.31px ;
     }
-    .morebutton{
-        bottom: auto;
-        top: 40px;
-    }    
-    .swiper-section{
-        margin-left: 40px;
+    /* width */
+    .fullwidth.w90{
         width: 90vw;
-        height: 100vh;
-        margin-bottom: 60px;
-        margin-left: 0;
     }
-    .swiper-section.swiper-section.logo-section{
-        height: 90vh;
+    .fullwidth.w80{
+        width: 80vw;
     }
-    .logo-div{
-        width: 100%;
-        height: 70vh;
+    .fullwidth.w70{
+        width: 70vw;
     }
-    .logo-img{
-        max-width: 400px;
-        max-height: 350px;
+    .fullwidth.w60{
+        width: 60vw;
     }
-    .swiper-slide{
-        size: 85vw;
+    .fullwidth.w50{
+        width: 50vw;
+        margin-left: 25%;
     }
-    iframe{
-        width: 560px;
-        height: 315px;
-    }
+    /* END width */
 }
-
-/* Desktop styles */
 @media (min-width: 1024px) {
+    img {
+        max-width: 1300px;
+    }
+    .h1div{
+        min-width: 900px;
+    }
+    section{
+        max-width: 1300px;
+        margin-bottom: 100px;
+    }
 }
