--- a/index.css
+++ b/index.css
@@ -1,63 +1,96 @@
-body, html {
+body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    font-family: Arial, sans-serif;
 }
-body {
-    cursor: none;
-    background-color: rgb(28, 17, 17);
+button{
+    background: transparent;
+    border-color: transparent;
 }
-
-#custom-cursor {
-    width: 90px;
-    height: 100px;
-    background-image: url('assets/pointer.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    pointer-events: none;
-    transition: transform 4s ease-out; /* This gives the fluid effect */
-    transform-origin: center;
-    z-index: 9999;
+img{
+    object-fit: cover;
 }
-
-.background {
-    position: absolute;
-    display: flex;
-    top: 0;
-    left: 0;
+#slider {
+    position: relative;
+    /*width: calc(100vw - 20vw); /* Adjust the width based on the main menu width */
     width: 100vw;
     height: 100vh;
-    transition: opacity 0.3s;
-    align-items: flex-star;
-    justify-content: flex-end;
+    /* overflow: hidden */
+    transition: transform 0.5s ease; /* Apply a transition for sliding */
 }
 
-#backgroundA {
-    background-image: url('assets/zeina-bottomright.jpg');
-    background-size: cover;
-    opacity: 1;
-    align-items: flex-end;
-    justify-content: flex-start;
+.slide {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    transition: transform 0.5s ease;
 }
-.p-a{
-    font-size: 7vw;
-    line-height: 6vw;
-    color: white;
-    font-family: micro;
-    margin-left: 50px;
+.slide::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(94deg, rgba(0, 0, 0, 0.43) 1.15%, rgba(0, 0, 0, 0.39) 96.4%);    opacity: 0.4; /* Adjust the opacity as needed */
+    transition: opacity 0.3s ease; /* Add a smooth transition effect */
 }
-.p-b{
-    font-size: 7vw;
-    line-height: 6vw;
-    font-family: micro;
-    text-align: right;
-    color: white;
-    margin-right: 50px;
+#slider-info {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: #fff;
 }
 
-#backgroundB {
-    background-image: url('assets/zeina-topright.jpg');
-    background-size: cover;
-    opacity: 0;
+#slider-navigation {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.slide-img{
+    width: 100%;
+    height: 100%;
+}
+.bg-icon{
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.prev-slide{
+    background-image: url(assets/up\ arrow.svg);
+}
+.next-slide{
+    background-image: url(assets/down\ arrow.svg);
+}
+
+
+#main-menu-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1;
+    background-image: url(assets/main\ menu.svg);
+    transition: transform 0.5s ease;
+}
+
+#main-menu {
+    position: fixed;
+    top: 0;
+    right: -20vw;
+    width: 20vw;
+    height: 100vh;
+    background-color: #333;
+    transition: right 0.5s ease;
+    overflow: hidden;
+    z-index: 2;
 }
