--- a/cv.css
+++ b/cv.css
@@ -1,50 +1,47 @@
-body{
-    margin: 0;
-    font-family: coda, sans-serif;
-    background-color: #9ec1d7;
-}
-html {
-    -webkit-print-color-adjust: exact;
-}
-* {
-    box-sizing: border-box;
-    -webkit-print-color-adjust: exact;
-} 
-html,
-body {
-    padding: 0;
-}
-@media only screen {
-    body {
-        margin: 20px;
-        max-width: 900px;
-        color: rgb(55, 53, 47);
-    }
-} 
-body {
-    line-height: 1.5;
-    white-space: pre-wrap;
-    margin: auto; 
-} 
-a,
-a.visited {
-    color: inherit;
-    text-decoration: underline;
-} 
-h1,
-h2,
-h3 {
-    letter-spacing: -0.01em;
-    line-height: 1.2;
+summary {
     font-weight: 600;
-    margin-bottom: 0;
-} 
-.page-title {
-    font-size: 2.5rem;
-    font-weight: 700;
-    margin-top: 0;
-    margin-bottom: 0.75em;
-} 
+    font-size: 1.25rem;
+    margin-top: 1.25rem;    
+    line-height: 1.3;
+    margin: 0;
+}
+
+.indented p {
+    margin-left: 20px;
+}
+
+.bulleted-list {
+    list-style-type: disc;
+    margin-left: 20px;
+}
+.grid{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.non-bullet-list{
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+body{
+    background-color: #9ec1d7;
+    font-family: coda, sans-serif;
+    color: #1C122D;
+}
+.container{
+    padding: 70px 20px 50px 20px;
+    max-width: 800px;
+    margin: auto;
+}
+a{
+    color: #1C122D;
+    text-decoration-color: rgb(247, 235, 8);
+}
+.portrait{
+    width: auto;
+    border-radius: 20px;
+}
 h1 {
     font-size: 1.875rem;
     margin-top: 1.875rem;
@@ -57,100 +54,35 @@ h3 {
     font-size: 1.25rem;
     margin-top: 1.25rem;
 } 
-.callout {
-    border-radius: 3px;
-    padding: 1rem;
+h1,
+h2,
+h3 {
+    letter-spacing: -0.01em;
+    line-height: 1.2;
+    font-weight: 600;
+    margin-bottom: 0;
 } 
-figure {
-    margin: 1.25em 0;
-    page-break-inside: avoid;
-} 
-.indented {
-    padding-left: 1.5em;
-} 
-img {
-    max-width: 100%;
-} 
-.column-list {
+.grid.strech{
+    width: 100%;
     display: flex;
     justify-content: space-between;
-} 
-.column {
-    padding: 0 1em;
-} 
-.column:first-child {
-    padding-left: 0;
-} 
-.column:last-child {
-    padding-right: 0;
-}  
-ol,
-ul {
-    margin: 0;
-    margin-block-start: 0.6em;
-    margin-block-end: 0.6em;
-} 
-ul > li {
-    list-style: disc;
-} 
-.to-do-children-checked {
-    text-decoration: line-through;
-    opacity: 0.375;
-} 
-ul.toggle > li {
-    list-style: none;
-} 
-ul {
-    padding-inline-start: 1.7em;
-} 
-ul > li {
-    padding-left: 0.1em;
-}  
-.page-description {
-    margin-bottom: 2em;
-} 
-.icon {
-    display: inline-block;
-    max-width: 1.2em;
-    max-height: 1.2em;
-    text-decoration: none;
-    vertical-align: text-bottom;
-    margin-right: 0.5em;
-} 
-p > .user {
-    opacity: 0.5;
-} 
-td > .user,
-td > time {
-    white-space: nowrap;
-} 
-input[type="checkbox"] {
-    transform: scale(1.5);
-    margin-right: 0.6em;
-    vertical-align: middle;
-} 
-p {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-} 
-.image {
-    border: none;
-    margin: 1.5em 0;
-    padding: 0;
-    border-radius: 0;
-    text-align: center;
+    flex-direction: row;
 }
-.block-color-default {
-    color: inherit;
-    fill: inherit;
+/* Tablet styles */
+@media (min-width: 600px) {   
+    .container{
+        padding: 50px 0 50px 0;
+    }
+    .grid{
+        flex-direction: row;
+    }
+    .portrait{
+        width: 300px;
+    }
+    .grid.strech{
+        flex-direction: row;
+    }
 }
-.block-color-gray {
-    color: rgba(120, 119, 116, 1);
-    fill: rgba(120, 119, 116, 1);
-}
-.block-color-gray_background {
-    background: rgba(241, 241, 239, 1);
-}
-.block-color-red_background {
-    background: rgba(253, 235, 236, 1);
+/* Desktop styles */
+@media (min-width: 1024px) {
 }
