--- a/cv2.css
+++ b/cv2.css
@@ -66,83 +66,23 @@ h3 {
     width: 100%;
     display: flex;
     justify-content: space-between;
-} 
-.column {
-    padding: 0 1em;
-} 
-.column:first-child {
-    padding-left: 0;
-} 
-.column:last-child {
-    padding-right: 0;
-}  
-ol,
-ul {
-    margin: 0;
-    margin-block-start: 0.6em;
-    margin-block-end: 0.6em;
-} 
-ul > li {
-    list-style: disc;
-} 
-.to-do-children-checked {
-    text-decoration: line-through;
-    opacity: 0.375;
-} 
-ul.toggle > li {
-    list-style: none;
-} 
-ul {
-    padding-inline-start: 1.7em;
-} 
-ul > li {
-    padding-left: 0.1em;
-}  
-.page-description {
-    margin-bottom: 2em;
-} 
-.icon {
-    display: inline-block;
-    max-width: 1.2em;
-    max-height: 1.2em;
-    text-decoration: none;
-    vertical-align: text-bottom;
-    margin-right: 0.5em;
-} 
-p > .user {
-    opacity: 0.5;
-} 
-td > .user,
-td > time {
-    white-space: nowrap;
-} 
-input[type="checkbox"] {
-    transform: scale(1.5);
-    margin-right: 0.6em;
-    vertical-align: middle;
-} 
-p {
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-} 
-.image {
-    border: none;
-    margin: 1.5em 0;
-    padding: 0;
-    border-radius: 0;
-    text-align: center;
+    flex-direction: row;
 }
-.block-color-default {
-    color: inherit;
-    fill: inherit;
+/* Tablet styles */
+@media (min-width: 600px) {   
+    .container{
+        padding: 50px 0 50px 0;
+    }
+    .grid{
+        flex-direction: row;
+    }
+    .portrait{
+        width: 300px;
+    }
+    .grid.strech{
+        flex-direction: row;
+    }
 }
-.block-color-gray {
-    color: rgba(120, 119, 116, 1);
-    fill: rgba(120, 119, 116, 1);
-}
-.block-color-gray_background {
-    background: rgba(241, 241, 239, 1);
-}
-.block-color-red_background {
-    background: rgba(253, 235, 236, 1);
+/* Desktop styles */
+@media (min-width: 1024px) {
 }
