--- a/project/project.css
+++ b/project/project.css
@@ -6,6 +6,10 @@ body{
     margin: auto;
     width: 100%;
     object-fit: cover;
+    max-width: 950px;
+}
+.center{
+    display: flex;
 }
 /* width */
 .fullwidth.w90{
@@ -50,11 +54,8 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 30px auto;
-    padding: 20px 30px;
-    min-width: 60vw;
-    line-height: 10%;
-    left: calc(50% - 843.76px/2 - 0px);
+    margin: 20px auto;
+    width: 100%;
     background: #1C122D;
     border-radius: 40px;
 }
@@ -109,9 +110,6 @@ section.active{
     body{
         margin: 40px 0 40px 0;
     }
-    .h1div{
-        padding: 30px 70px;
-    }
     h1{
         font-size: 103.31px ;
     }
@@ -135,4 +133,9 @@ section.active{
     /* END width */
 }
 @media (min-width: 1024px) {
+    .h1div{
+        min-width: 950px;
+        width: 950px;
+        pad
+    }
 }
