--- a/portfolio.css
+++ b/portfolio.css
@@ -21,7 +21,7 @@ body {
 }
 .swipe{
     font-size: 18px;
-    color: aliceblue;
+    color: rgb(247, 235, 8);
     font-family: coda, sans-serif;
     text-align: center;
     margin-top: -20px;
