--- a/project/project.css
+++ b/project/project.css
@@ -74,7 +74,8 @@ h1{
 p{
     color: #FFF;
     font-family: coda, sans-serif;
-    font-size: 32.4px;
+    font-size: 18px;
+    margin: 0 !important;
 }
 .arrowdiv{
     position: relative;
@@ -106,6 +107,9 @@ section.active{
     width: 100%;
     height: 100%;
 }
+.arrowdiv img{
+    display: none;
+}
 
 @media (min-width: 600px) {
     body{
@@ -132,6 +136,13 @@ section.active{
         margin-left: 25%;
     }
     /* END width */
+    p{
+        font-size: 32.4px;
+    }
+    .arrowdiv img{
+        display: block;
+        position: absolute;
+    }    
 }
 @media (min-width: 1024px) {
     h1{
