--- a/project/project.css
+++ b/project/project.css
@@ -60,7 +60,7 @@ h1{
     border-radius: 40px;
 }
 .highlighted{
-    color: #ffcc00;
+    color: var(--main-yellow);
     font-family: coda, sans-serif;
     font-size: 30.61px;
 } 
