--- a/portfolio.css
+++ b/portfolio.css
@@ -50,6 +50,7 @@ h2{
     text-align: center;
     font-size: 20px;
     color: aliceblue;
+    line-height: 0%;
 }
 .swiper-section.logo-section, .swiper-section.project-section{
     height: 150vw;
