--- a/project/project.css
+++ b/project/project.css
@@ -80,7 +80,16 @@ p{
 .arrowdiv{
     position: relative;
 }
-
+.link{
+    color: #FFF;
+    text-underline-offset: 10px;
+    margin: auto;
+    font-size: 24px;
+    font-family: Coda, sans-serif;
+}
+.link:hover{
+    color: var(--main-yellow);
+}
 section{
     position: relative;
     transform: translateY(150px);
