--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1b4a68;;
+    background-color: #0e1c26;;
     font-family: micro;
     margin: 0;
     padding: 0;
@@ -64,8 +64,6 @@ body {
     color: var(--main-yellow);
     font-family: coda, sans-serif;
     text-align: center;
-    margin-top: -20px;
-    margin-bottom: 70px;
 }
 h1{
     text-align: center;
@@ -79,6 +77,7 @@ h2{
     line-height: 0%;
 }
 .morebutton{
+    font-family: coda, sans-serif;
     position: fixed;
     top: 20px;
     right: 20px;
@@ -145,6 +144,7 @@ p{
     max-width: 900px;
     margin: auto;
     text-align: center;
+    letter-spacing: 1px;
 }
 /* Tablet styles */
 @media (min-width: 600px) {
@@ -166,15 +166,13 @@ p{
     }    
     .swiper-section{
         width: 100vw;
-        /* height: 60vw; */
         margin-left: 10vw;
-        margin-bottom: 60px;
+        margin-bottom: 80px;
         margin-left: 0;
     }
     .swiper-section.logo-section{
         width: 100vw;
         height: 55vw;
-        margin-bottom: 20px;
     }
     .swiper-section.project-section{
         width: 100vw;
