--- a/hire-me.css
+++ b/hire-me.css
@@ -1,9 +1,10 @@
+
 body{
     background-color: var(--black);
     font-family: coda, sans-serif;
 }
-p{
-    font-family: micro, sans-serif;
+.title{
+    font-family: micro, coda, sans-serif;
     font-size: 30px;
     margin:  0;
     color: var(--main-yellow);
@@ -14,8 +15,11 @@ p{
 }
 .container{
     max-width: 1300px;
+    margin:auto;
+    position: relative;
+    z-index: 1;
 }
-.header-div{
+.header-div-info{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +28,7 @@ p{
 .hire-me{
     width: 200px;
 }
+
 /* tabs */
 .buttondiv{
     position: relative;
