--- a/navigation.css
+++ b/navigation.css
@@ -149,6 +149,16 @@ body {
     margin: 0 10px 0 0;
     text-shadow: 1px 0px 5px rgb(0 0 0);
 }
+.footer{
+    margin: 20px;
+    background-color: var(--black);
+    border-radius: 20px;
+    padding: 50px;
+    color: var(--main-yellow);
+}
+.footer-a{
+    
+}
 @keyframes twirlInOutDepth {
     0%, 100% {
         transform: rotate(90deg) scale(0.5);
