--- a/logo.css
+++ b/logo.css
@@ -2,7 +2,7 @@ body {
     background-color: var(--black);
     font-family: micro;
     margin: 0;
-    padding: 0;
+    padding: 100px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,7 +57,12 @@ p {
     display: flex;
     flex-direction: column;
 }
+.center-all{
+    display: flex;
+    justify-content: center;
+}
 .cta{
+    display: none;
     background-color: var(--black); 
     padding: 7px 5px 0 5px;
     border-radius: 5px;
@@ -66,9 +71,13 @@ p {
     left: 50%;
     transform: translateX(-50%);
     text-decoration: none;
+    max-width: 70vw;
 }
 /* Tablet styles */
 @media (min-width: 600px) {
+    .cta{
+        display: block;
+    }
     h1 {
         font-size: 60px;
     }
@@ -83,6 +92,9 @@ p {
 }
 /* Desktop styles */
 @media (min-width: 1024px) {
+    body{
+        padding: 0;
+    }
     h1 {
         font-size: 70px;
     }
