--- a/navigation.css
+++ b/navigation.css
@@ -156,8 +156,18 @@ body {
     padding: 50px;
     color: var(--main-yellow);
 }
+.footer-structure{
+    display: flex;
+}
+.footer-div{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
 .footer-a{
-    
+    color: aliceblue;
+    text-decoration: none;
 }
 @keyframes twirlInOutDepth {
     0%, 100% {
