--- a/navigation.css
+++ b/navigation.css
@@ -149,6 +149,9 @@ body {
     margin: 0 10px 0 0;
     text-shadow: 1px 0px 5px rgb(0 0 0);
 }
+#main-footer{
+    z-index: 2;
+}
 .footer{
     margin: 20px;
     background-color: var(--black);
