--- a/navigation.css
+++ b/navigation.css
@@ -130,6 +130,7 @@ body {
     animation: twirlInOutDepth 20s infinite; 
     transition:ease-in 0.5s;
     scale: 1;
+    z-index: 30;
 }
 .hire-me-div:hover{
     scale: 1.1;
@@ -154,10 +155,13 @@ body {
 }
 .footer{
     margin: 20px;
+    margin: auto;
     background-color: var(--black);
     border-radius: 20px;
     padding: 50px;
     color: var(--main-yellow);
+    width: 80vw;
+    max-width: 1300px;
 }
 .footer-structure{
     display: flex;
@@ -168,9 +172,20 @@ body {
     flex-direction: column;
     gap: 5px;
 }
+.footer-h2{
+    font-family: micro, coda, sans-serif;
+}
 .footer-a{
     color: aliceblue;
     text-decoration: none;
+    font-family: coda, sans-serif;
+    transition: ease-in 0.5s;
+}
+.footer-a:hover{
+    color: var(--main-yellow);
+}
+.footer-p{
+    font-family: coda, sans-serif; 
 }
 @keyframes twirlInOutDepth {
     0%, 100% {
