--- a/navigation.css
+++ b/navigation.css
@@ -61,7 +61,7 @@ body {
     color: aliceblue;
     width: 80vw;
     height: 80vh;
-    background-color: #1C122D;
+    background-color: var(--black);
     margin: 10vh 10vw;
     border-radius: 30px;
 }
@@ -88,7 +88,7 @@ body {
     transition: ease-in;
 }
 .input{
-    background-color:#1c122d00;
+    background-color: var(--black);
     border: #555 none;
     border-bottom: var(--main-yellow) solid 1px;
     font-family: coda, sans-serif;
